--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jquery": "^3.5.1",
     "mixitup": "^3.3.1",
     "rateyo": "^2.3.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^6.4.11"
   },
   "dependencies": {}
 }
