--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
@@ -25,5 +26,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^6.4.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "waypoints": "^4.0.1"
+  }
 }
